# tf_test_studio

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.sh
static/: onfido.activeVideo.css  onfido.activeVideo.css.map  onfido.activeVideo.min.js  onfido.crossDevice.css  onfido.crossDevice.css.map  onfido.crossDevice.min.js  onfido.crossDevice.min.js.map  onfido.lang_de_DE.min.js  onfido.lang_es_ES.min.js  onfido.lang_fr_FR.min.js  onfido.lang_it_IT.min.js  onfido.lang_nl_NL.min.js  onfido.lang_pt_PT.min.js  onfido.min.js  onfido.min.js.map  onfidoAuth.activeVideo.css  onfidoAuth.activeVideo.css.map  onfidoAuth.activeVideo.min.js  onfidoAuth.authVendor.min.js  onfidoAuth.authVendor.min.js.map  onfidoAuth.crossDevice.css  onfidoAuth.crossDevice.css.map  onfidoAuth.crossDevice.min.js  onfidoAuth.crossDevice.min.js.map  onfidoAuth.lang_de_DE.min.js  onfidoAuth.lang_es_ES.min.js  onfidoAuth.lang_fr_FR.min.js  onfidoAuth.lang_it_IT.min.js  onfidoAuth.lang_nl_NL.min.js  onfidoAuth.lang_pt_PT.min.js  onfidoAuth.min.js  onfidoAuth.min.js.map  style.css  style.css.map
static/auth-sdk/FaceTec/FaceTecSDK.js/: FaceTecSDK.js
templates/: auth.html  error.html  init.html  view.html
