[tool.poetry]
name = "web_sdk_demo_orch"
version = "0.1.0"
description = "python web sdk test orch"
authors = ["daniele.pizzocchero <daniele.pizzocchero@onfido.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
onfido-python = "^2.1.0"
flake8 = "^4.0.1"
requests = "^2.27.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
